--- a/apps/meson.build
+++ b/apps/meson.build
@@ -28,6 +28,12 @@ rpicam_jpeg = executable('rpicam-jpeg', files('rpicam_jpeg.cpp'),
                          link_with : rpicam_app,
                          install : true)
 
+rpicam_mjpeg = executable('rpicam-mjpeg', files('rpicam_mjpeg.cpp'),
+                         include_directories : include_directories('..'),
+                         dependencies: [libcamera_dep, boost_dep],
+                         link_with : rpicam_app,
+                         install : true)
+
 # Install symlinks to the old app names for legacy purposes.
 install_symlink('libcamera-still',
                 install_dir: get_option('bindir'),
@@ -47,7 +53,7 @@ install_symlink('libcamera-raw',
 
 install_symlink('libcamera-jpeg',
                 install_dir: get_option('bindir'),
-                pointing_to: 'rpicam-jpeg')    
+                pointing_to: 'rpicam-jpeg')
 
 if enable_tflite
     rpicam_detect = executable('rpicam-detect', files('rpicam_detect.cpp'),
