Skip test actions on devices without runners
At this stage, we don't have anything to run these on, so they just
wait for a runner indefinitely.

--- a/.github/workflows/rpicam-apps-test.yml
+++ b/.github/workflows/rpicam-apps-test.yml
@@ -80,7 +80,11 @@ jobs:
 
     strategy:
       matrix:
-        camera: [ imx219, imx477, imx708, pi5-imx708-imx477 ]
+        camera:
+          - imx219
+          #- imx477
+          #- imx708
+          #- pi5-imx708-imx477
 
     steps:
     - uses: actions/checkout@v4
