--- a/.github/workflows/rpicam-comprehensive-test.yml
+++ b/.github/workflows/rpicam-comprehensive-test.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   run-tests:
     runs-on: self-hosted
+    timeout-minutes: 10
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -43,4 +44,3 @@ jobs:
         with:
           name: testing-report
           path: testing_report.txt
-          
